feat: 增加游戏中心

--- a/bilibili-lite/src/home/base.styl
+++ b/bilibili-lite/src/home/base.styl
@@ -8,7 +8,11 @@
 	display none !important
 
 .van-popover .sub-item a:hover
+.gg-carousel .more
 	background-color var(--c-hover)
+
+.gg-carousel .gg-icon
+	background-color transparent !important
 
 .video-card-common .ex-up
 .video-card-common .up
@@ -26,6 +30,7 @@
 .home-slide .item .title
 .video-card-reco .info-box .info .up
 .video-card-reco .info-box .info .play
+.gg-carousel .more
 	color var(--c-white) !important
 
 .first-screen
