--- a/bilibili-lite/src/live/header.styl
+++ b/bilibili-lite/src/live/header.styl
@@ -72,7 +72,7 @@
   background-color var(--c-bg-header) !important
   backdrop-filter blur(5px) !important
 
-.area-list-panel
+.area-list-panel .main-ctnr
 .link-panel-ctnr .panel-main-ctnr
 .calendar-checkin .content-ctnr
   border 1px solid var(--c-border)
