--- a/bilibili-lite/src/live/index.styl
+++ b/bilibili-lite/src/live/index.styl
@@ -1,5 +1,6 @@
 @-moz-document url-prefix("https://live.bilibili.com/"),
-url-prefix("https://link.bilibili.com/") {
+url-prefix("https://link.bilibili.com/"),
+url-prefix("https://www.bilibili.com/blackboard/live/") {
 	/* 直播样式 */
 	@import 'header'
 	@import 'home'
@@ -7,7 +8,8 @@ url-prefix("https://link.bilibili.com/") {
 	@import 'room'
 }
 @-moz-document url-prefix("https://live.bilibili.com/activity/"),
-url-prefix("https://live.bilibili.com/p/") {
+url-prefix("https://live.bilibili.com/p/"),
+url-prefix("https://www.bilibili.com/blackboard/live/") {
 	@import 'active'
 }
 @-moz-document url-prefix("https://link.bilibili.com/") {
