--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -60,6 +60,8 @@ em:not(.icon)
 .history-list .cover-contain .label
 .my-link-btn .hint-count
 .gift-item-wrap .expiration
+.hot-label
+.mic-wrapper.media-info-card .mic-content .mic-pic label
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
@@ -172,6 +174,7 @@ textarea
 .share-module .share-list .weixin-share-modal
 .selector-wrapper .more-type-wrapper
 .history-dlg
+.bangumi-options .opt-list
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
@@ -193,6 +196,8 @@ textarea
 .contri-condition .contri-sort .contri-sort-type li:hover
 .hash-popup .topic-container .item.is-selected
 .hash-popup .topic-container .item:hover
+.bangumi-options .opt-list li:hover
+.bangumi-options .opt-list li.disabled
   background-color var(--c-hover) !important
 
 .van-popper .popper__arrow
