--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -205,6 +205,7 @@ button
 .hsbtn .cancel
 .coupon-btn-disable
 .bl-button--primary:disabled
+.game-list-all
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
