--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -128,6 +128,7 @@
 .van-popper-avatar .level-bar .level-progress
 .bili-header-m .profile-m .grade .bar .lt
 .bili-header-m .profile-m .grade .bar .rate
+.bp-red-point
 	background-color var(--c-accent) !important
 
 .lang-change .lang-item .lang-title
