--- a/bilibili-lite/src/public/index.styl
+++ b/bilibili-lite/src/public/index.styl
@@ -1,4 +1,5 @@
-@-moz-document domain("bilibili.com") {
+@-moz-document domain("bilibili.com"),
+domain("biligame.com") {
   /* 公共样式  注意：下面一定要为 /*![[defaultTheme]]*/
   /*![[defaultTheme]]*/
   @import 'base'
