--- a/bilibili-lite/src/v/game.styl
+++ b/bilibili-lite/src/v/game.styl
@@ -60,6 +60,7 @@
 .schedule-contain .time-all.active span
 .library-contain .search-sort .sort-list li.active
 .game-menu ul li.active
+.game-banner .banner-title .title-content ul li a
   color var(--c-white) !important
 
 .game-banner .banner-title .title-content ul li.active a
