--- a/bilibili-lite/index.user.css
+++ b/bilibili-lite/index.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           bilibili-lite
 @namespace      tolking-usercss
-@version        1.1.2
+@version        1.1.3
 @description    一个简化的bilibili页面样式，自适应黑暗模式
 @author         tolking <qw13131wang@gmail.com> (https://ououe.com)
 @homepageURL		https://github.com/tolking/usercss/tree/master/bilibili-lite
@@ -30,7 +30,7 @@
 @advanced  color  backgroundDarkColor  "暗-背景"  #25272a
 @advanced  color  hoverDarkColor  "暗-次要背景"  rgba(20,20,20,.3)
 ==/UserStyle== */
-@-moz-document domain("bilibili.com") {
+@-moz-document domain("bilibili.com"), domain("biligame.com") {
   /*[[defaultTheme]]*/
   html {
     background-color: var(--c-background);
@@ -1059,7 +1059,8 @@
   .err-jump-btn,
   .hsbtn .cancel,
   .coupon-btn-disable,
-  .bl-button--primary:disabled {
+  .bl-button--primary:disabled,
+  .game-list-all {
     border: 1px solid var(--c-border) !important;
     background-color: var(--c-background) !important;
     color: var(--c-title) !important;
@@ -1144,7 +1145,8 @@
   .err-jump-btn span,
   .hsbtn .cancel span,
   .coupon-btn-disable span,
-  .bl-button--primary:disabled span {
+  .bl-button--primary:disabled span,
+  .game-list-all span {
     color: var(--c-text) !important;
   }
   .default::after,
@@ -1226,7 +1228,8 @@
   .err-jump-btn::after,
   .hsbtn .cancel::after,
   .coupon-btn-disable::after,
-  .bl-button--primary:disabled::after {
+  .bl-button--primary:disabled::after,
+  .game-list-all::after {
     content: none !important;
   }
   .default:hover,
@@ -1308,7 +1311,8 @@
   .err-jump-btn:hover,
   .hsbtn .cancel:hover,
   .coupon-btn-disable:hover,
-  .bl-button--primary:disabled:hover {
+  .bl-button--primary:disabled:hover,
+  .game-list-all:hover {
     border-color: var(--c-accent) !important;
     background-color: var(--c-hover) !important;
     color: var(--c-text) !important;
@@ -1392,7 +1396,8 @@
   .err-jump-btn:hover span,
   .hsbtn .cancel:hover span,
   .coupon-btn-disable:hover span,
-  .bl-button--primary:disabled:hover span {
+  .bl-button--primary:disabled:hover span,
+  .game-list-all:hover span {
     color: var(--c-text) !important;
   }
   .paging-box-big .dian,
@@ -1464,7 +1469,9 @@
   .type-label,
   .history-list .cover-contain .label,
   .my-link-btn .hint-count,
-  .gift-item-wrap .expiration {
+  .gift-item-wrap .expiration,
+  .hot-label,
+  .mic-wrapper.media-info-card .mic-content .mic-pic label {
     border: 0 !important;
     background-color: var(--c-accent) !important;
     color: var(--c-white) !important;
@@ -1529,7 +1536,9 @@
   .type-label:hover,
   .history-list .cover-contain .label:hover,
   .my-link-btn .hint-count:hover,
-  .gift-item-wrap .expiration:hover {
+  .gift-item-wrap .expiration:hover,
+  .hot-label:hover,
+  .mic-wrapper.media-info-card .mic-content .mic-pic label:hover {
     color: var(--c-white) !important;
   }
   .gg-icon,
@@ -1633,7 +1642,8 @@
   .modal-wrapper,
   .share-module .share-list .weixin-share-modal,
   .selector-wrapper .more-type-wrapper,
-  .history-dlg {
+  .history-dlg,
+  .bangumi-options .opt-list {
     border-color: var(--c-border) !important;
     background-color: var(--c-background) !important;
     color: var(--c-text) !important;
@@ -1654,7 +1664,9 @@
   .classify .sub-list .sub-item:hover,
   .contri-condition .contri-sort .contri-sort-type li:hover,
   .hash-popup .topic-container .item.is-selected,
-  .hash-popup .topic-container .item:hover {
+  .hash-popup .topic-container .item:hover,
+  .bangumi-options .opt-list li:hover,
+  .bangumi-options .opt-list li.disabled {
     background-color: var(--c-hover) !important;
   }
   .van-popper .popper__arrow {
@@ -1820,7 +1832,8 @@
   }
   .van-popper-avatar .level-bar .level-progress,
   .bili-header-m .profile-m .grade .bar .lt,
-  .bili-header-m .profile-m .grade .bar .rate {
+  .bili-header-m .profile-m .grade .bar .rate,
+  .bp-red-point {
     background-color: var(--c-accent) !important;
   }
   .lang-change .lang-item .lang-title {
@@ -2451,8 +2464,12 @@
   .van-popper-channel .popper__arrow {
     display: none !important;
   }
-  .van-popover .sub-item a:hover {
+  .van-popover .sub-item a:hover,
+  .gg-carousel .more {
     background-color: var(--c-hover);
+  }
+  .gg-carousel .gg-icon {
+    background-color: transparent !important;
   }
   .video-card-common .ex-up,
   .video-card-common .up,
@@ -2469,7 +2486,8 @@
   .live-card .count,
   .home-slide .item .title,
   .video-card-reco .info-box .info .up,
-  .video-card-reco .info-box .info .play {
+  .video-card-reco .info-box .info .play,
+  .gg-carousel .more {
     color: var(--c-white) !important;
   }
   .first-screen {
@@ -3131,7 +3149,8 @@
   .schedule-filter .filter-content .content-all div.active,
   .schedule-contain .time-all.active span,
   .library-contain .search-sort .sort-list li.active,
-  .game-menu ul li.active {
+  .game-menu ul li.active,
+  .game-banner .banner-title .title-content ul li a {
     color: var(--c-white) !important;
   }
   .game-banner .banner-title .title-content ul li.active a,
@@ -3609,7 +3628,8 @@
   .review-feed-item .feed-left .review-about,
   .review-feed-item .feed-right .likes,
   .section-item .section-text .section-title,
-  .media-info-card .mic-expand {
+  .media-info-card .mic-expand,
+  .misl-ep-item .misl-ep-text .misl-ep-title {
     color: var(--c-text) !important;
   }
   .media-info-r span,
@@ -3639,7 +3659,8 @@
   .bangumi-media .bangumi-media-header .btn-more-review,
   .sort-type-wrp ul,
   .review-list-wrp li,
-  .review-feed-item {
+  .review-feed-item,
+  .media-tab-module-wrp .media-tab-module-content .sl-ep-nav .mode-select {
     border-color: var(--c-border) !important;
   }
   .media-info-wrp .media-info-content .media-info-inner .media-info-r .media-info-title .media-tag {
@@ -3660,6 +3681,36 @@
   }
   .btn-pay-wrapper.is-vip a {
     text-indent: 0;
+  }
+  .season-slider-wrapper .slider-wrapper .season-slider-list,
+  .season-slider-wrapper .slider-wrapper .season-slider-list li,
+  .season-slider-wrapper .slider-wrapper .season-slider-list li a,
+  .season-slider-wrapper .slider-wrapper .season-slider-list li div {
+    height: 50px;
+    line-height: 50px;
+  }
+  .season-slider-wrapper .slider-wrapper .season-slider-list li {
+    margin: 0;
+    padding: 0 10px;
+    border-color: var(--c-border) !important;
+    background-color: transparent;
+  }
+  .season-slider-wrapper .slider-wrapper .season-slider-list li::before,
+  .season-slider-wrapper .slider-wrapper .season-slider-list li::after {
+    content: none;
+  }
+  .season-slider-wrapper .slider-wrapper .season-slider-list li:first-child {
+    border-left: 1px solid var(--c-border);
+  }
+  .season-slider-wrapper .slider-wrapper .season-slider-list li.cur,
+  .season-slider-wrapper .slider-wrapper .season-slider-list li:hover {
+    background-color: var(--c-hover);
+  }
+  .season-slider-wrapper .slider-wrapper .season-slider-list li.cur a,
+  .season-slider-wrapper .slider-wrapper .season-slider-list li:hover a,
+  .season-slider-wrapper .slider-wrapper .season-slider-list li.cur div,
+  .season-slider-wrapper .slider-wrapper .season-slider-list li:hover div {
+    color: var(--c-accent) !important;
   }
   .bangumi-media .bangumi-media-header .rate-wrapper .btn-go-write {
     background-color: transparent !important;
@@ -4697,7 +4748,7 @@
     background-color: rgba(0,0,0,0.6) !important;
   }
 }
-@-moz-document url-prefix("https://live.bilibili.com/"), url-prefix("https://link.bilibili.com/") {
+@-moz-document url-prefix("https://live.bilibili.com/"), url-prefix("https://link.bilibili.com/"), url-prefix("https://www.bilibili.com/blackboard/live/") {
   .user-title-sending-cntr .panel,
   .user-panel-ctnr .user-panel,
   .link-panel-ctnr,
@@ -4771,7 +4822,7 @@
     background-color: var(--c-bg-header) !important;
     backdrop-filter: blur(5px) !important;
   }
-  .area-list-panel,
+  .area-list-panel .main-ctnr,
   .link-panel-ctnr .panel-main-ctnr,
   .calendar-checkin .content-ctnr {
     border: 1px solid var(--c-border);
@@ -5247,7 +5298,7 @@
     }
 }
 }
-@-moz-document url-prefix("https://live.bilibili.com/activity/"), url-prefix("https://live.bilibili.com/p/") {
+@-moz-document url-prefix("https://live.bilibili.com/activity/"), url-prefix("https://live.bilibili.com/p/"), url-prefix("https://www.bilibili.com/blackboard/live/") {
   .bili-footer {
     display: none !important;
   }
@@ -5290,11 +5341,13 @@
     position: absolute;
     width: 100%;
   }
-  button {
+  button,
+  .btn {
     background-color: transparent !important;
     color: var(--c-title) !important;
   }
-  button::after {
+  button::after,
+  .btn::after {
     content: none !important;
   }
 }
@@ -7732,5 +7785,118 @@
   }
   .header .right li.user-wrapper .avatar:hover .detail {
     height: 161px !important;
+  }
+}
+@-moz-document domain("biligame.com"), url-prefix("https://game.bilibili.com/") {
+  footer,
+  .footer-public,
+  .bui-sns-info,
+  .g-title .btn .ic-gift {
+    display: none;
+  }
+  #page .game,
+  .banner,
+  .listing-ul li,
+  .pagination a.backhome,
+  .pagination select,
+  .bili-comment-container,
+  .pop-nav {
+    background-color: var(--c-background) !important;
+  }
+  .nav-notice li,
+  .nav-notice li.hover,
+  .nav-notice li:hover,
+  .game-more,
+  a.listing-btn:hover,
+  .listing-sort a:hover,
+  .pagination a.backhome:hover,
+  .gift-recommend .gift-box {
+    background-color: var(--c-hover) !important;
+  }
+  .gift-recommend .gift-box .info .price-box .price-old:before {
+    background-color: var(--c-border) !important;
+  }
+  #page .game .game-box h4,
+  .gift-recommend .gift-box .info .price-box em,
+  .gift-all .gift-box .info .price-box em {
+    background-color: transparent !important;
+  }
+  .listing-sort a.active,
+  .gift-recommend .g-title h4:before,
+  .gift-all .gift-box:hover {
+    background-color: var(--c-accent) !important;
+  }
+  .listing-sort a.active {
+    color: var(--c-white) !important;
+  }
+  #page .game .game-box dl dt {
+    color: var(--c-accent) !important;
+  }
+  .nav-notice li,
+  .banner-p a,
+  .breadcrumb-item,
+  a.listing-btn,
+  .listing-sort a,
+  .pagination a.backhome,
+  .pagination select,
+  .gift-all .gift-box {
+    border-color: var(--c-border);
+  }
+  .nav-notice li.hover,
+  .nav-notice li:hover,
+  .banner-p h3,
+  #page .game .game-box h4 span,
+  a.listing-btn:hover,
+  .listing-sort a.active,
+  .listing-sort a:hover,
+  .pagination a.backhome:hover {
+    border-color: var(--c-accent);
+  }
+  .banner,
+  #page .game .game-box,
+  #page .game .game-box-1,
+  #page .game .game-box-3,
+  .game-box-others,
+  .breadcrumb h2,
+  .listing-ul li {
+    border: 0;
+  }
+  .listing-ul li,
+  .pop-nav {
+    box-shadow: none;
+  }
+  .banner .slides-pagination {
+    bottom: -1px;
+    background-image: none;
+    background-color: var(--c-bg-header);
+    backdrop-filter: blur(5px);
+  }
+  .banner .slides-pagination li {
+    border-radius: 50%;
+    background-color: var(--c-scroll);
+    background-image: none;
+  }
+  .banner .slides-pagination li.selected {
+    background-color: var(--c-accent);
+  }
+  .nav-notice .clearfix {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+  .nav-notice .clearfix li {
+    float: none;
+    flex: 1;
+    width: auto;
+  }
+  button,
+  .btn {
+    background-color: transparent !important;
+    color: var(--c-title) !important;
+  }
+  button::after,
+  .btn::after {
+    content: none !important;
   }
 }
