--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -94,6 +94,7 @@ button
 .searchBtn
 .hsbtn .sure
 .coupon-btn
+.charge-btn-style
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
