--- a/bilibili-lite/src/v/base.styl
+++ b/bilibili-lite/src/v/base.styl
@@ -36,15 +36,30 @@
 .audio-list .song-list .song-li .content .text
 .game-groom-m .title
 .game-groom-m .num
-	background-color var(--c-background)
+.charge-container
+	background-color var(--c-background) !important
+
+.primary-menu .nav-menu .sub-nav li:hover
+.video-floor-m .zone-title .headline .read-push:hover
+.audio-comers-module .zone-title .headline .read-push:hover
+.promote-m .headline .change-push:hover
+.new-stat-module .zone-title .headline .read-push:hover
+.random-change:hover
+.charge-header .user-link
+.battery-item .battery-bg
+	background-color var(--c-hover) !important
+
+.split-line
+	background-color var(--c-border) !important
 
 .primary-menu .nav-menu .channel.on:after
 .timeline-box .timeline-item.new p.num a
-	background-color var(--c-accent)
+	background-color var(--c-accent) !important
 
 .video-item-biref .biref-info .biref-title
 .energy-m .headline .name
 .coming-soon-wrapper .block-title
+.battery-pay-info
 	color var(--c-title) !important
 
 .bangumi-home-crumb .fcname ul.n_num li a
@@ -52,10 +67,13 @@
 .sub-nav-m ul li a
 .coming-soon-wrapper .card-wrapper .card-item .time-line-wrapper .date
 .coming-soon-wrapper .card-wrapper .card-item .time-line-wrapper .time
+.charge-info
 	color var(--c-text) !important
 
 .bangumi-home-crumb .fcname ul.n_num li.on a
-	color var(--c-accent)
+.battery-item.active .battery-text
+.battery-pay-info span
+	color var(--c-accent) !important
 
 .sub-nav-m ul li.on a
 	color var(--c-accent) !important
@@ -68,24 +86,24 @@
 
 .primary-menu.border-b
 .cinema-home-crumb ul li
-	border-color var(--c-border)
+.charge-header .user-link
+.battery-item .battery-bg
+	border-color var(--c-border) !important
+
+.battery-item.active .battery-bg
+	border-color var(--c-accent) !important
+
+.charge-header-bg
+	background-image none !important
 
 .primary-menu .nav-menu>li .num-wrap span
-	background-color var(--c-accent)
-	color var(--c-white)
+	background-color var(--c-accent) !important
+	color var(--c-white) !important
 
 .primary-menu .nav-menu .sub-nav
 .sub-nav-m .tips
 	border 1px solid var(--c-border)
-	background-color var(--c-background)
-
-.primary-menu .nav-menu .sub-nav li:hover
-.video-floor-m .zone-title .headline .read-push:hover
-.audio-comers-module .zone-title .headline .read-push:hover
-.promote-m .headline .change-push:hover
-.new-stat-module .zone-title .headline .read-push:hover
-.random-change:hover
-	background-color var(--c-hover)
+	background-color var(--c-background) !important
 
 .bili-wrapper .l-con
 .block-area .block-left
@@ -161,7 +179,7 @@
 
 .game-groom-m
 	border 0
-	background-color var(--c-background)
+	background-color var(--c-background) !important
 
 .block-left
 .special-recom-module .block-body
