--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -11,7 +11,7 @@
 .main-container .media-info .media-right .media-tool-bar .btn-rating:hover
 .short-review-masker .short-review-content
 .main-container .pay-bar .vip .btn-pay
-.bilibili-player-video-sendbar .bilibili-player-video-inputbar
+.bilibili-player-video-bottom-area .bilibili-player-video-sendbar .bilibili-player-video-inputbar
 .members-info__header
 .bilibili-player .bilibili-player-area .bilibili-player-video-panel
 .v-wrap .danmaku-wrap
@@ -25,7 +25,7 @@
 .section-ep-wrapper .ep-item:hover
 .ep-list-wrapper .ep-item.cursor
 .section-ep-wrapper .ep-item.cursor
-.bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-hint
+.bilibili-player-video-bottom-area .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-hint
 .bilibili-player .bilibili-player-area .bilibili-player-video-wrap .bilibili-player-volumeHint
 #bofqi.mini-player .drag-bar
 .video-page-card .card-box .pic-box
@@ -37,6 +37,7 @@
 	background-color var(--c-border) !important
 
 .bilibili-player em
+.bilibili-player.mode-webfullscreen .bilibili-player-video-control-wrap .bilibili-player-video-control-bottom-center .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-danmaku-input
 	background-color transparent !important
 
 .bui-slider .bui-track .bui-bar-wrap .bui-bar
@@ -52,6 +53,9 @@
 .bilibili-player-video-wrap span
 .bilibili-player-video-wrap span:hover
 .player-tooltips div
+.bilibili-player-context-menu-container.black ul>li a
+.bilibili-player-context-menu-container.black ul>li a span
+.bilibili-player-video-control-bottom-center .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-danmaku-input
 	color var(--c-white) !important
 
 .video-info .video-title .tit
@@ -66,7 +70,7 @@
 .main-container .season-list .ss-list-wrapper .ss-item .ss-info .ss-title
 	color var(--c-title) !important
 
-.bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-hint a span
+.bilibili-player-video-bottom-area .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-hint a span
 .main-container .review-module .review-list .review-item .review-content
 .main-container .review-module .review-list .review-item .pub-time
 .video-desc .info
@@ -143,7 +147,7 @@ ul.star-wrapper li i.icon-star-full
 .bilibili-player-video-btn-fullscreen:hover .bp-svgicon svg .st0
 	fill var(--c-accent) !important
 
-.bilibili-player-video-sendbar
+.bilibili-player-video-bottom-area .bilibili-player-video-sendbar
 .tag-info-pane
 .tag-del-popup
 .tag-report-popup
@@ -166,7 +170,7 @@ ul.star-wrapper li i.icon-star-full
 .main-container .plp-l .comment-wrapper
 .open-dialog-masker .open-dialog-content .__dialog-header
 .video-toolbar .ops .share .share-pos .box-b
-.bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-inputbar-wrap
+.bilibili-player-video-bottom-area .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-inputbar-wrap
 	border-color var(--c-border) !important
 
 .video-toolbar .ops .share .share-pos
