feat: 优化创作中心

--- a/bilibili-lite/src/member/academy.styl
+++ b/bilibili-lite/src/member/academy.styl
@@ -1,4 +1,10 @@
 /* 创作学院 */
+.up-index .bg01, .up-index .bg02
+  display: none !important
+
+.up-index .fixed-bar
+  background-color: var(--c-background) !important
+
 .carousel-wrap .panel .pic li
   background-color var(--c-hover) !important
 
@@ -8,6 +14,7 @@
   background-color var(--c-border) !important
 
 .academy-left-name
+.up-index .fixed-bar .slogan
   color var(--c-title) !important
 
 .tabs-nav .tab-item.full span
@@ -32,6 +39,10 @@
 
 .pager .jump-pager
   vertical-align middle
+
+.up-index .fixed-bar
+  border-top: 1px solid var(--c-border)
+  box-shadow: none
 
 .tabs-nav .tab-item.border-bottom
   background-color transparent !important
