--- a/bilibili-lite/src/member/base.styl
+++ b/bilibili-lite/src/member/base.styl
@@ -32,6 +32,10 @@
 .edit-article-wrap #edit-article-box
 #text-contribute .fixed-header
 .editor-box .editor-toolbar
+.cover-v2-container .cover-v2-detail-wrp .cover-v2-selector
+.cover-v2-container .cover-v2-detail-wrp .cover-v2-selector .cover-v2-selector-deg
+.cc-modal .modal
+.share-modal .modal-bottom
   background-color var(--c-background) !important
 
 .message-notice_wrap .tips-item_wrap
@@ -56,6 +60,19 @@
 #edit-page .edit-notice
 .cover-upload-box .no-img:hover
 .tips-calendar_wrap
+.header .right-block .avatar img
+.stat-wrp
+.article-data-wrp .video-box
+.article-net-charts .content-box
+.detail-wrp .detail-empty
+.normal-v2-container .normal-title-wrp>.template-op
+.normal-v2-container .normal-title-wrp>.template-op-disabled
+.cover-v2-container .cover-v2-detail-wrp .cover-v2-selector .cover-v2-selector-items .selector-item
+.content-tag-v2-container .content-tag-v2-edit-mod-wrp
+.content-tag-v2-container .content-tag-v2-other-tag-error-wrp
+.article-danmu-wrp .danmu-box .danmu-table .danmu-item:nth-child(odd)
+.article-danmu-wrp .danmu-box .danmu-table .danmu-item:hover
+.article-danmu-wrp .danmu-box .danmu-table .danmu-item .item-act .option-wrp .act-btn
   background-color var(--c-hover) !important
 
 .dc-progress-bar
@@ -63,6 +80,8 @@
 #charge-wrapper .main-charge .elec-con .progress .progress-bar .bar:after
 .apply-page-title:after
 .lab-item .lab-item-content .divide-line
+.line-divid
+.normal-v2-container .normal-title-wrp>.template-op>.template-op-divide
   background-color var(--c-border) !important
 
 .carousel-module .panel .title .tag
@@ -76,6 +95,8 @@
 .float-toolbar .toolbar-list
 .float-toolbar .back-top
 .edui-default .edui-editor
+.article-danmu-wrp .danmu-box
+.article-danmu-wrp .danmu-filter .left .delete .option-wrp .act-btn
   background-color transparent !important
 
 .tabs .tabs__header .tabs__header-item.is-active:after
@@ -91,8 +112,9 @@
 .new-calendar-wrap .calendar-body .date-wrap .wrap-content .select-text
 .notice_wrap .notice_title .notice-txt
 .data-card .tab .data-tab
-.interact-wrap .header .tabs .tabs__header .tabs__header-item.is-active span
+.interact-wrap .header .tabs .tabs__header .tabs__header-item span
 .comment-item .right-block .like-reply div
+.danmu-item .right-block .delete-protect div
 .academy-wrap .header .academy-tag
 .dc-section-item1_title_custom span
 #dc-section_summary .source-rank-list-item .rank
@@ -102,6 +124,9 @@
 .lab-item .lab-item-content .content-detail p
 .setting .setting-title
 .setting .section-title
+.ui-popup .popup-wrap .text-box .text
+.share-modal .modal .modal-close
+.cc-article-wrp .del-wrp .modal-wrap .del-title
   color var(--c-title) !important
 
 .notice_wrap .notice_body .hot-item .item-right
@@ -118,6 +143,12 @@
 .lab-item .lab-item-content .content-detail .detail-desc
 .lab-item .lab-item-content .content-detail .feedback
 .mobile-award-panel .content-container .install-text
+.danmu-item .right-block .danmu-content
+.detail-wrp .detail-empty
+.ui-popup .popup-wrap .text-box .subtext
+.article-danmu-wrp .danmu-filter .left .delete .plain
+.article-danmu-wrp .danmu-box .danmu-table .danmu-item .item-content
+.cc-article-wrp .del-wrp .modal-wrap .del-tips
   color var(--c-text) !important
 
 .link-top-container .link-top-item.active .red_point
@@ -126,10 +157,13 @@
 .calendarEntry_box .greetings .greet-num
 .new-calendar-wrap .calendar-body .date-wrap .wrap-content .today
 .data-card .tab .data-tab.current
+.data-card .tab .data-tab:hover
 .section-item .text-content span
 .academy-wrap .content .tabs .tabs__header .tabs__header-item.is-active span
 .bili-tab.current
 .bili-tab.current span
+.bili-tab:hover
+.bili-tab:hover span
 .select-box .option-footer:hover
 .select-box .option-footer:hover span
 .dc-radio-button.is-active span
@@ -145,6 +179,11 @@
 .video-editor-ol-wrp .icon-xic_video_huaban
 .editor-box .editor-toolbar .child-list li:hover
 i.icon-shape:after
+.interact-wrap .header .tabs .tabs__header .tabs__header-item.is-active span
+.interact-wrap .header .tabs .tabs__header .tabs__header-item:hover span
+.comment-item .right-block .like-reply div:hover
+.danmu-item .right-block .delete-protect div:hover
+.stat-card .num .text
   color var(--c-accent) !important
 
 .bili-share-pc
@@ -189,22 +228,55 @@ i.icon-shape:after
 .read-list-component .creat-read-list-box .add-btn
 .footer-content
 #edit-page .edit-notice
-.line-divid
 .tips-calendar_wrap
+.header .right-block .avatar img
+.danmu-item .right-block .origin
+.stat-wrp .stat-card
+.dividing-line
+.normal-v2-container .normal-title-wrp>.template-op
+.normal-v2-container .normal-title-wrp>.template-op.template-op-disabled
+.cover-v2-container .cover-v2-detail-wrp .cover-v2-selector
+.input-box-v2-1-container
+.content-tag-v2-container .content-tag-v2-edit-mod-wrp
+.content-tag-v2-container .content-tag-v2-other-tag-error-wrp
+.text-area-box-v2-container
+.share-modal .av-wrp .av-wrp-inner
+.share-modal .modal-bottom .share-addr .av-addr-wrp
+.article-danmu-wrp .danmu-filter .left .delete .plain
+.article-danmu-wrp .danmu-box .danmu-table .danmu-item .item-act .option-wrp .act-btn
+.article-danmu-wrp .danmu-filter .left .delete
+.article-danmu-wrp .danmu-filter .left .danmu-type
+.article-danmu-wrp .danmu-filter .left .protect
+.article-danmu-wrp .danmu-filter .left .refresh
+.article-danmu-wrp .danmu-filter .left .danmu-type .plain
+.article-danmu-wrp .danmu-filter .left .protect .plain
+.article-danmu-wrp .danmu-filter .left .refresh .plain
   border-color var(--c-border) !important
+
+.cc-article-wrp .del-wrp .modal-wrap .geetest_holder.geetest_wind .geetest_radar_btn
+.cc-article-wrp .del-wrp .modal-wrap .geetest_holder.geetest_wind .geetest_success_btn
+  border-color var(--c-accent) !important
 
 .recent-danmu-wrp .danmu-filter .left .option-menu .option-arrow-border
   border-bottom-color var(--c-background) !important
 
 .recent-danmu-wrp .danmu-filter .left .option-menu .option-arrow
 .upload-v2-container .upload-agreement .reg-1 .reg-2-tip::after
+.cover-v2-container .cover-v2-detail-wrp .cover-v2-selector .cover-v2-selector-deg
+.article-danmu-wrp .danmu-filter .left .option-menu .option-arrow
   border-bottom-color var(--c-border) !important
+
+.article-danmu-wrp .danmu-filter .left .option-menu .option-arrow-border
+  border-bottom-color var(--c-background) !important
 
 .section-item .diff-wrp .diff-text:before
   border-bottom-color var(--c-accent) !important
 
 .upload-v2-container .upload-agreement .reg-1 .reg-2-tip::after
   border-right-color var(--c-border) !important
+
+.cover-v2-container .cover-v2-detail-wrp .cover-v2-selector .cover-v2-selector-deg
+  border-left-color var(--c-border) !important
 
 .recent-danmu-wrp .danmu-filter .left .option-menu
 .editor-box
@@ -224,11 +296,25 @@ i.icon-shape:after
 .magnetic .content
 #charge-wrapper .main-charge .elec-con
 #charge-wrapper .main-charge .shell-con
+.stat-wrp
+.article-chart-wrp
+#articleChart
+.article-net-charts .content-box
+.detail-wrp .detail-empty
+.article-danmu-wrp .danmu-box
+.article-danmu-wrp .danmu-box .danmu-table .danmu-item
   border 0 !important
 
 .danmu-container
 .editor-box .editor-toolbar .child-list
 .cc-btn
+.article-data-wrp .video-box
+.stat-wrp
+.article-net-charts .content-box
+.detail-wrp .detail-empty
+.article-danmu-wrp .danmu-box
+.cc-article-wrp .del-wrp .modal-wrap .geetest_holder.geetest_wind .geetest_radar_btn
+.cc-article-wrp .del-wrp .modal-wrap .geetest_holder.geetest_wind .geetest_success_btn
   box-shadow none !important
 
 .ui-dropdown .default
