--- a/bilibili-lite/src/member/index.styl
+++ b/bilibili-lite/src/member/index.styl
@@ -4,5 +4,8 @@ url-prefix("https://cm.bilibili.com/") {
 	@import 'header'
 	@import 'sidebar'
 	@import 'base'
+}
+@-moz-document url-prefix("https://cm.bilibili.com/") {
+	/* 创作学院 */
 	@import 'academy'
 }
