--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -175,6 +175,7 @@ textarea
 .selector-wrapper .more-type-wrapper
 .history-dlg
 .bangumi-options .opt-list
+.ui-popup .popup-wrap
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
