--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -95,6 +95,10 @@ button
 .hsbtn .sure
 .coupon-btn
 .charge-btn-style
+.article-chart-wrp .tools .btn-group .ui-btn
+.file-list-v2-container .file-add-btn
+.submit-button-group-v2-container .submit-btn-group-add
+.share-modal .copy-btn
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
