--- a/bilibili-lite/src/video/index.styl
+++ b/bilibili-lite/src/video/index.styl
@@ -1,5 +1,6 @@
 @-moz-document url-prefix("https://www.bilibili.com/video/"),
-url-prefix("https://www.bilibili.com/bangumi/") {
+url-prefix("https://www.bilibili.com/bangumi/"),
+url-prefix("https://player.bilibili.com/") {
 	/* 视频播放界面样式 */
 	@import 'base'
 	@import 'danmaku'
