--- a/bilibili-lite/index.user.css
+++ b/bilibili-lite/index.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           bilibili-lite
 @namespace      tolking-usercss
-@version        1.1.3
+@version        1.1.4
 @description    一个简化的bilibili页面样式，自适应黑暗模式
 @author         tolking <qw13131wang@gmail.com> (https://ououe.com)
 @homepageURL		https://github.com/tolking/usercss/tree/master/bilibili-lite
@@ -484,7 +484,11 @@
   .searchBtn,
   .hsbtn .sure,
   .coupon-btn,
-  .charge-btn-style {
+  .charge-btn-style,
+  .article-chart-wrp .tools .btn-group .ui-btn,
+  .file-list-v2-container .file-add-btn,
+  .submit-button-group-v2-container .submit-btn-group-add,
+  .share-modal .copy-btn {
     position: relative;
     border-color: var(--c-accent) !important;
     background-color: var(--c-accent) !important;
@@ -586,7 +590,11 @@
   .searchBtn span,
   .hsbtn .sure span,
   .coupon-btn span,
-  .charge-btn-style span {
+  .charge-btn-style span,
+  .article-chart-wrp .tools .btn-group .ui-btn span,
+  .file-list-v2-container .file-add-btn span,
+  .submit-button-group-v2-container .submit-btn-group-add span,
+  .share-modal .copy-btn span {
     color: var(--c-white) !important;
   }
   button::after,
@@ -683,7 +691,11 @@
   .searchBtn::after,
   .hsbtn .sure::after,
   .coupon-btn::after,
-  .charge-btn-style::after {
+  .charge-btn-style::after,
+  .article-chart-wrp .tools .btn-group .ui-btn::after,
+  .file-list-v2-container .file-add-btn::after,
+  .submit-button-group-v2-container .submit-btn-group-add::after,
+  .share-modal .copy-btn::after {
     content: '';
     display: block;
     position: absolute;
@@ -789,7 +801,11 @@
   .searchBtn:hover,
   .hsbtn .sure:hover,
   .coupon-btn:hover,
-  .charge-btn-style:hover {
+  .charge-btn-style:hover,
+  .article-chart-wrp .tools .btn-group .ui-btn:hover,
+  .file-list-v2-container .file-add-btn:hover,
+  .submit-button-group-v2-container .submit-btn-group-add:hover,
+  .share-modal .copy-btn:hover {
     color: var(--c-white) !important;
   }
   button:hover span,
@@ -886,7 +902,11 @@
   .searchBtn:hover span,
   .hsbtn .sure:hover span,
   .coupon-btn:hover span,
-  .charge-btn-style:hover span {
+  .charge-btn-style:hover span,
+  .article-chart-wrp .tools .btn-group .ui-btn:hover span,
+  .file-list-v2-container .file-add-btn:hover span,
+  .submit-button-group-v2-container .submit-btn-group-add:hover span,
+  .share-modal .copy-btn:hover span {
     color: var(--c-white) !important;
   }
   button:hover::after,
@@ -983,7 +1003,11 @@
   .searchBtn:hover::after,
   .hsbtn .sure:hover::after,
   .coupon-btn:hover::after,
-  .charge-btn-style:hover::after {
+  .charge-btn-style:hover::after,
+  .article-chart-wrp .tools .btn-group .ui-btn:hover::after,
+  .file-list-v2-container .file-add-btn:hover::after,
+  .submit-button-group-v2-container .submit-btn-group-add:hover::after,
+  .share-modal .copy-btn:hover::after {
     transform: translateX(100%);
   }
   .default,
@@ -1649,7 +1673,8 @@
   .share-module .share-list .weixin-share-modal,
   .selector-wrapper .more-type-wrapper,
   .history-dlg,
-  .bangumi-options .opt-list {
+  .bangumi-options .opt-list,
+  .ui-popup .popup-wrap {
     border-color: var(--c-border) !important;
     background-color: var(--c-background) !important;
     color: var(--c-text) !important;
@@ -3340,7 +3365,7 @@
     content: none !important;
   }
 }
-@-moz-document url-prefix("https://www.bilibili.com/video/"), url-prefix("https://www.bilibili.com/bangumi/") {
+@-moz-document url-prefix("https://www.bilibili.com/video/"), url-prefix("https://www.bilibili.com/bangumi/"), url-prefix("https://player.bilibili.com/") {
   .video-page-special-card {
     display: none;
   }
@@ -6959,7 +6984,11 @@
   #edit-page,
   .edit-article-wrap #edit-article-box,
   #text-contribute .fixed-header,
-  .editor-box .editor-toolbar {
+  .editor-box .editor-toolbar,
+  .cover-v2-container .cover-v2-detail-wrp .cover-v2-selector,
+  .cover-v2-container .cover-v2-detail-wrp .cover-v2-selector .cover-v2-selector-deg,
+  .cc-modal .modal,
+  .share-modal .modal-bottom {
     background-color: var(--c-background) !important;
   }
   .message-notice_wrap .tips-item_wrap,
@@ -6983,14 +7012,29 @@
   .qa-area-ol-wrp,
   #edit-page .edit-notice,
   .cover-upload-box .no-img:hover,
-  .tips-calendar_wrap {
+  .tips-calendar_wrap,
+  .header .right-block .avatar img,
+  .stat-wrp,
+  .article-data-wrp .video-box,
+  .article-net-charts .content-box,
+  .detail-wrp .detail-empty,
+  .normal-v2-container .normal-title-wrp>.template-op,
+  .normal-v2-container .normal-title-wrp>.template-op-disabled,
+  .cover-v2-container .cover-v2-detail-wrp .cover-v2-selector .cover-v2-selector-items .selector-item,
+  .content-tag-v2-container .content-tag-v2-edit-mod-wrp,
+  .content-tag-v2-container .content-tag-v2-other-tag-error-wrp,
+  .article-danmu-wrp .danmu-box .danmu-table .danmu-item:nth-child(odd),
+  .article-danmu-wrp .danmu-box .danmu-table .danmu-item:hover,
+  .article-danmu-wrp .danmu-box .danmu-table .danmu-item .item-act .option-wrp .act-btn {
     background-color: var(--c-hover) !important;
   }
   .dc-progress-bar,
   #charge-wrapper .main-charge .elec-con .progress .progress-bar .bar,
   #charge-wrapper .main-charge .elec-con .progress .progress-bar .bar:after,
   .apply-page-title:after,
-  .lab-item .lab-item-content .divide-line {
+  .lab-item .lab-item-content .divide-line,
+  .line-divid,
+  .normal-v2-container .normal-title-wrp>.template-op>.template-op-divide {
     background-color: var(--c-border) !important;
   }
   .carousel-module .panel .title .tag,
@@ -7003,7 +7047,9 @@
   .ui-input-textarea textarea,
   .float-toolbar .toolbar-list,
   .float-toolbar .back-top,
-  .edui-default .edui-editor {
+  .edui-default .edui-editor,
+  .article-danmu-wrp .danmu-box,
+  .article-danmu-wrp .danmu-filter .left .delete .option-wrp .act-btn {
     background-color: transparent !important;
   }
   .tabs .tabs__header .tabs__header-item.is-active:after,
@@ -7019,8 +7065,9 @@
   .new-calendar-wrap .calendar-body .date-wrap .wrap-content .select-text,
   .notice_wrap .notice_title .notice-txt,
   .data-card .tab .data-tab,
-  .interact-wrap .header .tabs .tabs__header .tabs__header-item.is-active span,
+  .interact-wrap .header .tabs .tabs__header .tabs__header-item span,
   .comment-item .right-block .like-reply div,
+  .danmu-item .right-block .delete-protect div,
   .academy-wrap .header .academy-tag,
   .dc-section-item1_title_custom span,
   #dc-section_summary .source-rank-list-item .rank,
@@ -7029,7 +7076,10 @@
   .apply-page-title>p,
   .lab-item .lab-item-content .content-detail p,
   .setting .setting-title,
-  .setting .section-title {
+  .setting .section-title,
+  .ui-popup .popup-wrap .text-box .text,
+  .share-modal .modal .modal-close,
+  .cc-article-wrp .del-wrp .modal-wrap .del-title {
     color: var(--c-title) !important;
   }
   .notice_wrap .notice_body .hot-item .item-right,
@@ -7045,7 +7095,13 @@
   .protect-apply-entry-wrp .protect-appeal,
   .lab-item .lab-item-content .content-detail .detail-desc,
   .lab-item .lab-item-content .content-detail .feedback,
-  .mobile-award-panel .content-container .install-text {
+  .mobile-award-panel .content-container .install-text,
+  .danmu-item .right-block .danmu-content,
+  .detail-wrp .detail-empty,
+  .ui-popup .popup-wrap .text-box .subtext,
+  .article-danmu-wrp .danmu-filter .left .delete .plain,
+  .article-danmu-wrp .danmu-box .danmu-table .danmu-item .item-content,
+  .cc-article-wrp .del-wrp .modal-wrap .del-tips {
     color: var(--c-text) !important;
   }
   .link-top-container .link-top-item.active .red_point {
@@ -7054,10 +7110,13 @@
   .calendarEntry_box .greetings .greet-num,
   .new-calendar-wrap .calendar-body .date-wrap .wrap-content .today,
   .data-card .tab .data-tab.current,
+  .data-card .tab .data-tab:hover,
   .section-item .text-content span,
   .academy-wrap .content .tabs .tabs__header .tabs__header-item.is-active span,
   .bili-tab.current,
   .bili-tab.current span,
+  .bili-tab:hover,
+  .bili-tab:hover span,
   .select-box .option-footer:hover,
   .select-box .option-footer:hover span,
   .dc-radio-button.is-active span,
@@ -7072,7 +7131,12 @@
   .setting .section-edit:hover span,
   .video-editor-ol-wrp .icon-xic_video_huaban,
   .editor-box .editor-toolbar .child-list li:hover,
-  i.icon-shape:after {
+  i.icon-shape:after,
+  .interact-wrap .header .tabs .tabs__header .tabs__header-item.is-active span,
+  .interact-wrap .header .tabs .tabs__header .tabs__header-item:hover span,
+  .comment-item .right-block .like-reply div:hover,
+  .danmu-item .right-block .delete-protect div:hover,
+  .stat-card .num .text {
     color: var(--c-accent) !important;
   }
   .bili-share-pc,
@@ -7117,22 +7181,55 @@
   .read-list-component .creat-read-list-box .add-btn,
   .footer-content,
   #edit-page .edit-notice,
-  .line-divid,
-  .tips-calendar_wrap {
+  .tips-calendar_wrap,
+  .header .right-block .avatar img,
+  .danmu-item .right-block .origin,
+  .stat-wrp .stat-card,
+  .dividing-line,
+  .normal-v2-container .normal-title-wrp>.template-op,
+  .normal-v2-container .normal-title-wrp>.template-op.template-op-disabled,
+  .cover-v2-container .cover-v2-detail-wrp .cover-v2-selector,
+  .input-box-v2-1-container,
+  .content-tag-v2-container .content-tag-v2-edit-mod-wrp,
+  .content-tag-v2-container .content-tag-v2-other-tag-error-wrp,
+  .text-area-box-v2-container,
+  .share-modal .av-wrp .av-wrp-inner,
+  .share-modal .modal-bottom .share-addr .av-addr-wrp,
+  .article-danmu-wrp .danmu-filter .left .delete .plain,
+  .article-danmu-wrp .danmu-box .danmu-table .danmu-item .item-act .option-wrp .act-btn,
+  .article-danmu-wrp .danmu-filter .left .delete,
+  .article-danmu-wrp .danmu-filter .left .danmu-type,
+  .article-danmu-wrp .danmu-filter .left .protect,
+  .article-danmu-wrp .danmu-filter .left .refresh,
+  .article-danmu-wrp .danmu-filter .left .danmu-type .plain,
+  .article-danmu-wrp .danmu-filter .left .protect .plain,
+  .article-danmu-wrp .danmu-filter .left .refresh .plain {
     border-color: var(--c-border) !important;
+  }
+  .cc-article-wrp .del-wrp .modal-wrap .geetest_holder.geetest_wind .geetest_radar_btn,
+  .cc-article-wrp .del-wrp .modal-wrap .geetest_holder.geetest_wind .geetest_success_btn {
+    border-color: var(--c-accent) !important;
   }
   .recent-danmu-wrp .danmu-filter .left .option-menu .option-arrow-border {
     border-bottom-color: var(--c-background) !important;
   }
   .recent-danmu-wrp .danmu-filter .left .option-menu .option-arrow,
-  .upload-v2-container .upload-agreement .reg-1 .reg-2-tip::after {
+  .upload-v2-container .upload-agreement .reg-1 .reg-2-tip::after,
+  .cover-v2-container .cover-v2-detail-wrp .cover-v2-selector .cover-v2-selector-deg,
+  .article-danmu-wrp .danmu-filter .left .option-menu .option-arrow {
     border-bottom-color: var(--c-border) !important;
+  }
+  .article-danmu-wrp .danmu-filter .left .option-menu .option-arrow-border {
+    border-bottom-color: var(--c-background) !important;
   }
   .section-item .diff-wrp .diff-text:before {
     border-bottom-color: var(--c-accent) !important;
   }
   .upload-v2-container .upload-agreement .reg-1 .reg-2-tip::after {
     border-right-color: var(--c-border) !important;
+  }
+  .cover-v2-container .cover-v2-detail-wrp .cover-v2-selector .cover-v2-selector-deg {
+    border-left-color: var(--c-border) !important;
   }
   .recent-danmu-wrp .danmu-filter .left .option-menu,
   .editor-box,
@@ -7151,12 +7248,26 @@
   .comment-manage-wrap .no-content,
   .magnetic .content,
   #charge-wrapper .main-charge .elec-con,
-  #charge-wrapper .main-charge .shell-con {
+  #charge-wrapper .main-charge .shell-con,
+  .stat-wrp,
+  .article-chart-wrp,
+  #articleChart,
+  .article-net-charts .content-box,
+  .detail-wrp .detail-empty,
+  .article-danmu-wrp .danmu-box,
+  .article-danmu-wrp .danmu-box .danmu-table .danmu-item {
     border: 0 !important;
   }
   .danmu-container,
   .editor-box .editor-toolbar .child-list,
-  .cc-btn {
+  .cc-btn,
+  .article-data-wrp .video-box,
+  .stat-wrp,
+  .article-net-charts .content-box,
+  .detail-wrp .detail-empty,
+  .article-danmu-wrp .danmu-box,
+  .cc-article-wrp .del-wrp .modal-wrap .geetest_holder.geetest_wind .geetest_radar_btn,
+  .cc-article-wrp .del-wrp .modal-wrap .geetest_holder.geetest_wind .geetest_success_btn {
     box-shadow: none !important;
   }
   .ui-dropdown .default {
@@ -7179,6 +7290,15 @@
   .ui-serch .run-serch::after {
     content: none !important;
   }
+}
+@-moz-document url-prefix("https://cm.bilibili.com/") {
+  .up-index .bg01,
+  .up-index .bg02 {
+    display: none !important;
+  }
+  .up-index .fixed-bar {
+    background-color: var(--c-background) !important;
+  }
   .carousel-wrap .panel .pic li {
     background-color: var(--c-hover) !important;
   }
@@ -7187,7 +7307,8 @@
   .list-header .filter-wrp .video-type .line {
     background-color: var(--c-border) !important;
   }
-  .academy-left-name {
+  .academy-left-name,
+  .up-index .fixed-bar .slogan {
     color: var(--c-title) !important;
   }
   .tabs-nav .tab-item.full span {
@@ -7212,6 +7333,10 @@
   }
   .pager .jump-pager {
     vertical-align: middle;
+  }
+  .up-index .fixed-bar {
+    border-top: 1px solid var(--c-border);
+    box-shadow: none;
   }
   .tabs-nav .tab-item.border-bottom {
     background-color: transparent !important;
